--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.7"
+  },
+  "dependencies": {
+    "express": "^4.21.2"
   }
 }
